# tabletop-civlike

./: .gitignore  .gitmodules  README.md
data/: def_map.json  def_player.json  def_unit.json  map.json  order.json  unit.json
data/proxima/: README.md  def_unit.json  order_PLY00001_0.json  unit.json
data/result/: def_attack.json  def_defense.json  def_map.json  def_unit.json  map.json  player.json  unit.json  unit_dead.json
resolver/: CMakeLists.txt  README.md  README.txt  reference.cpp  resolver_config.h.in
resolver/resolver_server/: data.cpp  data.hpp  data_dumper.cpp  data_dumper.hpp  data_parser.cpp  data_parser.hpp  game_resolver.cpp  game_resolver.hpp  main.cpp  reference.cpp  reference.hpp
